<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fill_memory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chen.wayne.myfillmemory.FillMemoryActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="0dp"
        android:paddingBottom="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:onClick="onClick">
                <Button
                    android:layout_width="@dimen/toolbar_imageButton"
                    android:layout_height="@dimen/toolbar_imageButton"
                    android:background="@drawable/back"
                    android:scaleType="centerInside"
                    android:layout_centerVertical="true"
                    android:onClick="buttonClick"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="内存填充"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="0dp"
        android:paddingTop="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:text="@string/btn_size"
            android:background="@color/colorTransparent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorSelected"
            android:id="@+id/size"/>
        <Button
            android:text="@string/btn_percent"
            android:background="@color/colorUnselectedBg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:id="@+id/percent"
            android:textColor="@color/colorUnselected"/>
    </LinearLayout>
    <EditText
        android:id="@+id/new_size"
        android:layout_centerInParent="true"
        android:textColor="@color/colorNewSize"
        android:textSize="23sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:background="@null"
        android:hint="@string/hint_new_size"
        android:textColorHint="@color/colorUnselected"/>
    <ImageView
        android:id="@+id/horizontal_line"
        android:layout_width="180dp"
        android:layout_height="5dp"
        android:scaleType="fitCenter"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/new_size"
        android:src="@drawable/horizontal_line"/>
    <TextView
        android:id="@+id/unit"
        android:layout_centerInParent="true"
        android:textColor="@color/colorNewSize"
        android:layout_below="@+id/horizontal_line"
        android:textSize="15sp"
        android:text="@string/unit_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/progress_bar"
        android:scaleType="fitCenter"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/circle_progress_bar"
        android:layout_centerInParent="true"/>
    <TextView
        android:text="@string/label_new_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_new_size"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorSelected"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/new_size"
        android:layout_centerHorizontal="true"/>
    <Button android:id="@+id/fill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_fill"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_bar"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/label_free_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:id="@+id/label_free_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:text="@string/default_text"
                android:id="@+id/free_size"/>
            <TextView
                android:text="@string/unit_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:id="@+id/unit1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/label_used_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:id="@+id/label_used_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:text="@string/default_text"
                android:id="@+id/used_size"/>
            <TextView
                android:text="@string/unit_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:id="@+id/unit2"/>
        </TableRow>
        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:gravity="right"
                android:text="@string/label_total_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:id="@+id/label_total_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:text="@string/default_text"
                android:id="@+id/total_size"/>
            <TextView
                android:text="@string/unit_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorLabel"
                android:id="@+id/unit3"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:text="@string/tips_size"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_layout"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tips_size"/>
    <TextView
        android:text="@string/tips_percent"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_layout"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tips_percent"/>
</RelativeLayout>
